--- a/styles/blocks/_stages-transformation.scss
+++ b/styles/blocks/_stages-transformation.scss
@@ -2,8 +2,8 @@
 
 .stages-transformation {
   margin-top: rem(200);
-   overflow-x: hidden;
-   overflow-x: clip; 
+  overflow-x: hidden;
+  overflow-x: clip;
   @include tablet {
     margin-top: rem(120);
   }
@@ -53,7 +53,7 @@
   }
   &__item {
     position: relative;
-    background-image: url("../../images/stages-transformation/backgroundPaper.jpg");
+    background-image: url("../images/stages-transformation/backgroundPaper.jpg");
     background-size: cover;
     background-position: 0% center;
     isolation: isolate;
@@ -113,7 +113,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background: url("../../images/stages-transformation/background.jpg")
+    background: url("../images/stages-transformation/background.jpg")
       center/cover no-repeat;
     mix-blend-mode: color-burn;
     pointer-events: none;
