--- a/styles/blocks/_stages-transformation.scss
+++ b/styles/blocks/_stages-transformation.scss
@@ -53,7 +53,7 @@
   }
   &__item {
     position: relative;
-    background-image: url("../images/stages-transformation/backgroundPaper.jpg");
+    background-image: url("../images/stages-transformation/backgroundPaper.webp");
     background-size: cover;
     background-position: 0% center;
     isolation: isolate;
@@ -113,7 +113,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background: url("../images/stages-transformation/background.jpg")
+    background: url("../images/stages-transformation/background.webp")
       center/cover no-repeat;
     mix-blend-mode: color-burn;
     pointer-events: none;
